syntax = "proto3";
package proto;
import "common.proto";

message TextureId {
  uint32 tag = 1;
  uint64 managed = 2;
  uint64 user = 3;
}

message Mesh {
  TextureId texture_id = 1;
  bytes indices = 2;
  uint32 index_count = 3;
  bytes vertices = 4;
  uint32 vertex_count = 5;
}

message ClippedPrimitive {
  Rect clip_rect = 1;
  uint32 tag = 2;
  Mesh mesh = 3;
}

message Image {
  uint32 width = 1;
  uint32 height = 2;
  bytes data = 3;
}

message Texture {
  TextureId id = 1;
  uint32 pos_x = 2;
  uint32 pos_y = 3;
  Image image = 4;
  uint32 texture_filter = 5;
}

message Output {
  repeated ClippedPrimitive primitives = 1;
  repeated Texture texture_set = 2;
  repeated TextureId texture_free = 3;
  uint32 repaint_after = 4;
}